created react query code for get call on front-end, wrote swagger documentation
