# packages/api/swagger.yaml
@@ -58,6 +58,22 @@ paths:
           description: Successful response
         500:
           description: Failure
+  /business/loyalty-program:
+    get:
+      tags:
+        - business
+      summary: Get the current loyalty program data of the user
+      description: Queries user profile and loyalty program table in DB for data and sends it back to the front-end. No params required because the header includes the clerk ID already
+      operationId: getBusinessLoyaltyProgram
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BusinessLoyaltyProgram"
+        500:
+          description: User Does not exist in DB
 components:
   schemas:
     BusinessProfile:
@@ -93,3 +109,28 @@ components:
         description:
           type: string
           example: "this is a really cool store"
+    BusinessLoyaltyProgram:
+      type: object
+      properties:
+        stampLife:
+          type: number
+          example: null
+        stampCount:
+          type: number
+          example: 6
+        scaleAmount:
+          type: string
+          example: "5"
+        definedRewards:
+          type: array
+          items:
+            $ref: "#/components/schemas/Reward"
+    Reward:
+      type: object
+      properties:
+        title:
+          type: string
+          example: "Free Pineapple Bun"
+        requiredStamps:
+          type: number
+          example: 3
